@@ -32,7 +32,7 @@ dependencies {
   testImplementation deps.kotlinStdLib
   testImplementation deps.kotlinCoroutines
 
-  annotationProcessor "com.uber.nullaway:nullaway:0.10.20"
+  annotationProcessor "com.uber.nullaway:nullaway:0.10.15"
   annotationProcessor "edu.ucr.cs.riple.annotator:annotator-scanner:1.3.15"
 
   compileOnly "com.google.code.findbugs:jsr305:3.0.2"
@@ -41,23 +41,48 @@ dependencies {
   compileOnly "com.uber.nullaway:nullaway-annotations:0.10.20"
 }
 
+
+def scanner_path = project.rootProject.projectDir.toString() + "/annotator-out/scanner.xml"
+def nullaway_path = project.rootProject.projectDir.toString() + "/annotator-out/nullaway.xml"
+
 import net.ltgt.gradle.errorprone.CheckSeverity
 tasks.withType(JavaCompile) {
+
+
+  println(nullaway_path)
+
+
   // remove the if condition if you want to run NullAway on test code
   if (!name.toLowerCase().contains("test")) {
     options.errorprone.disableAllChecks = true
     options.errorprone.disableAllWarnings = true
     options.errorprone {
-      check("NullAway", CheckSeverity.OFF)
-      check("AnnotatorScanner", CheckSeverity.OFF)
+      check("NullAway", CheckSeverity.ERROR)
+      check("AnnotatorScanner", CheckSeverity.ERROR)
       option("NullAway:AnnotatedPackages", "retrofit2")
       option("NullAway:SerializeFixMetadata", "true")
-      option("NullAway:FixSerializationConfigPath", "/tmp/annotator/checker.xml")
-      option("AnnotatorScanner:ConfigPath", "/tmp/annotator/scanner.xml")
+      option("NullAway:FixSerializationConfigPath", nullaway_path)
+      option("AnnotatorScanner:ConfigPath", scanner_path)
     }
   }
   options.compilerArgs << "-Xmaxerrs" << "100000"
   options.compilerArgs << "-Xmaxwarns" << "100000"
+}
+
+tasks.withType(JavaCompile).configureEach {
+  options.compilerArgs += [
+          "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+          "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+          "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+          "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+          "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+          "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+          "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+          "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+          "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+          "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+          "--add-exports=jdk.compiler/com.sun.source.tree=ALL-UNNAMED",
+  ]
 }
 
 jar {
